# CrossRoadsAI

./: .gitignore  AGENTS.md  CONTEXT.md  main.py  pyproject.toml
.agents/skills/implement-issue/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: issue-to-pr-with-tdd.prompt.md
.github/workflows/: pytest.yml
config/: simulation.yaml
docs/adr/: 0001-conflict-derived-signal-groups.md  0002-rectangle-based-stop-line-base.md
docs/agents/: issue-tracker.md
docs/plantuml/: application-architecture.puml
src/crossroads/: __init__.py  app.py  config.py  intersection.py  lane_paths.py  metrics.py  renderer.py  runtime_config.py  simulation.py  traffic_generator.py  traffic_light.py  traffic_light_rendering.py  traffic_phasing.py  vehicle.py
src/crossroadsai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_app.py  test_app_exit.py  test_app_turn_paths.py  test_headless_simulation.py  test_intersection.py  test_lane_paths.py  test_metrics.py  test_offscreen_renderer.py  test_runtime_config.py  test_simulation.py  test_traffic_generator.py  test_traffic_light.py  test_vehicle.py
