[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crossroadsai"
version = "0.1.0"
description = "Basic traffic intersection simulation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pygame>=2.5,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
